postgres operator管理接口
